--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 bootcamp11-desafio2-conceitos-node.js
 bootcamp11-desafio3-conceitos-reactJS
+bootcamp11-desafio4-conceitos-react-native
 
 # Logs
 logs
