Aula - Iniciando back-end do app, finalizado autenticacao com JWT

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ bootcamp11-desafio2-conceitos-node.js
 bootcamp11-desafio3-conceitos-reactJS
 bootcamp11-desafio4-conceitos-react-native
 bootcamp11-desafio5-primeiro-projeto-nodejs
+auth.ts
 
 # Logs
 logs
