--- a/nivel2/iniciando-back-end/.eslintrc.json
+++ b/nivel2/iniciando-back-end/.eslintrc.json
@@ -25,6 +25,9 @@
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "argsIgnorePattern": "_"
+    }],
     "class-methods-use-this": "off",
     "import/extensions": [
       "error",
