Aula Iniciando front-end web

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ bootcamp11-desafio3-conceitos-reactJS
 bootcamp11-desafio4-conceitos-react-native
 bootcamp11-desafio5-primeiro-projeto-nodejs
 bootcamp11-desafio6-Banco-de-dados-e-upload-de-arquivos-no-nodejs
+desafio7-gofinances-web
 auth.ts
 
 tmp/*
